--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h2>Hello world</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis excepturi aliquam nisi repellendus magnam aut corrupti porro adipisci doloribus placeat facere nobis autem debitis consequuntur illum, voluptatibus id nam explicabo.</p>
 </body>
 </html>
