--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Comments -->
     <h2>Hello world</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis excepturi aliquam nisi repellendus magnam aut corrupti porro adipisci doloribus placeat facere nobis autem debitis consequuntur illum, voluptatibus id nam explicabo.</p>
 </body>
