--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <!-- Comments -->
-    <h3>Hello world</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis excepturi aliquam nisi repellendus magnam aut corrupti porro adipisci doloribus placeat facere nobis autem debitis consequuntur illum, voluptatibus id nam explicabo.</p>
-    <ul>
-        <li>First</li>
-        <li>Second</li>
-    </ul>
-    <h3>Chapter 1</h3>
-    <h4>Chapter 2</h4>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga ad, ullam officiis quasi recusandae cumque veritatis minima consequatur! Quae nostrum perspiciatis non laudantium facere beatae ipsa, reiciendis natus nobis eos.</p>
+    <header class="container mx-auto">
+        <div class="flex justify-between pt-5">
+            <span class="font-bold text-3xl">Tailwind</span>
+            <div class="space-x-5">
+                <a href="" class="hover:underline">Home</a>
+                <a href="" class="hover:underline">About</a>
+                <a href="" class="hover:bg-blue-500 bg-blue-400 py-2 px-4 rounded-full text-white">Contacts</a>
+            </div>
+        </div>
+    </header>
+
+    <main class="container mx-auto py-11">
+        <h1 class="text-center text-3xl font-bold">Tailwind CSS</h1>
+        <p class="pt-10 w-1/2 mx-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora magnam, sed impedit non inventore quis delectus ea excepturi illum totam possimus omnis asperiores. Voluptas quisquam nostrum voluptates laboriosam provident illum.</p>
+    </main>
+
 </body>
 </html>
